--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,32 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div id="frame">
+        <div id ="display"> 12345 </div>
+            <div id="button-container">
+                <button id = "clear" class="extra">Clear</button>
+                <button id = "plus-minus" class="extra">+/-</button>
+                <button id = "percent" class="extra">%</button>
+                <button id = "divide" class="operator">/</button>
+                <button id = "seven" class="digit">7</button>
+                <button id = "eight" class="digit">8</button>
+                <button id = "nine" class="digit">9</button>
+                <button id = "multiply" class="operator">*</button>
+                <button id = "four" class="digit">4</button>
+                <button id = "five" class="digit">5</button>
+                <button id = "six" class="digit">6</button>
+                <button id = "subtract" class="operator">-</button>
+                <button id = "one" class="digit">1</button>
+                <button id = "two" class="digit">2</button>
+                <button id = "three" class="digit">3</button>
+                <button id = "add" class="operator">+</button>
+                <button id = "zero" class="digit">0</button>
+                <button id = "decimal" class="digit">.</button>
+                <button id = "equals" class="operator">=</button>
+            </div>
+        
+
+    </div>
 
     <script src = "calculator.js">
 
