--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="frame">
-        <div id ="display"> 12345 </div>
+        <div id ="display"></div>
             <div id="button-container">
                 <button id = "clear" class="extra">Clear</button>
                 <button id = "plus-minus" class="extra">+/-</button>
